# lazydb

./: .envrc  Cargo.toml  LICENSE  README.md
.config/: config.json5
.github/workflows/: cd.yml
src/: action.rs  app.rs  app_event.rs  components.rs  config.rs  database.rs  main.rs  render_plan.rs
src/components/: cell_popup.rs  connection_menu.rs  detail_popup.rs  messages.rs  results_table.rs  schema_list.rs  structure_table.rs  table_list.rs  text_editor.rs  title.rs
src/database/: connection.rs  system_query.rs
